[gd_scene load_steps=17 format=3 uid="uid://3ey4ti2j780a"]

[ext_resource type="Script" uid="uid://c3daccp10fnsb" path="res://Space/Asteroid.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://qetgg583nnuo" path="res://CustomTweenComponent.tscn" id="2"]
[ext_resource type="Shader" uid="uid://dqtyraop8obus" path="res://Space/Sroll.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://dv733robgubwy" path="res://Art/Golden Texture.png" id="4"]
[ext_resource type="PackedScene" uid="uid://bmrl1633qfoop" path="res://HealthComponent.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://drrc7o7atsa0a" path="res://Tendril.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://htiftikslcat" path="res://Art/Asteroid/pattern_03.png" id="7"]
[ext_resource type="PackedScene" uid="uid://bboodkd6bt1tf" path="res://Radioactive.tscn" id="8"]

[sub_resource type="Animation" id="Animation_qrhnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Art:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:freeze")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g4png"]
resource_name = "pop_in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_load"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:freeze")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.050000012),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prj66"]
_data = {
&"RESET": SubResource("Animation_qrhnj"),
&"pop_in": SubResource("Animation_g4png")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qr85q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0wdxr"]
resource_local_to_scene = true
shader = ExtResource("3")
shader_parameter/speed = Vector2(0.2, 0)
shader_parameter/tint_color = Color(1, 1, 1, 1)

[sub_resource type="Shader" id="Shader_gqhrc"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int lightning_number = 5;
uniform vec2 amplitude = vec2(2.0,1.0);
uniform float offset = 0.45;
uniform float thickness = 0.02;
uniform float speed = 3.0;
uniform vec4 base_color : source_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float glow_thickness = 0.08;
uniform vec4 glow_color : source_color = vec4(0.2, 0, 0.8, 0.0);
uniform float alpha : hint_range(0, 1) = 1.0;

// plot function 
float plot(vec2 st, float pct, float half_width){
  return  smoothstep( pct-half_width, pct, st.y) -
          smoothstep( pct, pct+half_width, st.y);
}

vec2 hash22(vec2 uv) {
    uv = vec2(dot(uv, vec2(127.1,311.7)),
              dot(uv, vec2(269.5,183.3)));
    return 2.0 * fract(sin(uv) * 43758.5453123) - 1.0;
}

float noise(vec2 uv) {
    vec2 iuv = floor(uv);
    vec2 fuv = fract(uv);
    vec2 blur = smoothstep(0.0, 1.0, fuv);
    return mix(mix(dot(hash22(iuv + vec2(0.0,0.0)), fuv - vec2(0.0,0.0)),
                   dot(hash22(iuv + vec2(1.0,0.0)), fuv - vec2(1.0,0.0)), blur.x),
               mix(dot(hash22(iuv + vec2(0.0,1.0)), fuv - vec2(0.0,1.0)),
                   dot(hash22(iuv + vec2(1.0,1.0)), fuv - vec2(1.0,1.0)), blur.x), blur.y) + 0.5;
}

float fbm(vec2 n) {
    float total = 0.0, amp = 1.0;
    for (int i = 0; i < 7; i++) {
        total += noise(n) * amp;
        n += n;
        amp *= 0.5;
    }
    return total;
}


void fragment(){
	vec2 uv = UV;
	vec4 color = vec4(0.0, 0.0, 0.0, 0.0);
	
	vec2 t ;
	float y ;
	float pct ;
	float buffer;	
	// add more lightning
	for ( int i = 0; i < lightning_number; i++){
		t = uv * amplitude + vec2(float(i), -float(i)) - TIME*speed;
		y = fbm(t)*offset;
		pct = plot(uv, y, thickness);
		buffer = plot(uv, y, glow_thickness);
		color += pct*base_color;
		color += buffer*glow_color;
	}
	
	color.a *= alpha;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6p8m6"]
resource_local_to_scene = true
shader = SubResource("Shader_gqhrc")
shader_parameter/lightning_number = 2
shader_parameter/amplitude = Vector2(2, 1)
shader_parameter/offset = 0.45
shader_parameter/thickness = 0.05
shader_parameter/speed = -0.3
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0.05
shader_parameter/glow_color = Color(0, 0, 0, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hhx2n"]
shader = ExtResource("3")
shader_parameter/speed = Vector2(0.2, 0)
shader_parameter/tint_color = Color(0, 0, 0, 0.05882353)

[node name="Asteroid" type="Node2D" node_paths=PackedStringArray("health_component")]
light_mask = 0
z_index = 1
script = ExtResource("1")
health_component = NodePath("Art/HealthComponent")

[node name="CustomTweenComponent" parent="." node_paths=PackedStringArray("base_node") instance=ExtResource("2")]
unique_name_in_owner = true
base_node = NodePath("../Art")
do_scale = true
scale_amount = Vector2(1.2, 1.2)
do_rotation = true
rotation_amount = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_prj66")
}

[node name="Art" type="Node2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_qr85q")

[node name="Polygon2D" type="Polygon2D" parent="Art"]
unique_name_in_owner = true
self_modulate = Color(0.360784, 0.392157, 0.619608, 1)
clip_children = 2
texture_repeat = 2
antialiased = true
polygon = PackedVector2Array(-79, -18, 75, -11, 99, 48, 25, 106, -82, 93)

[node name="GoldenTexture" type="Polygon2D" parent="Art"]
unique_name_in_owner = true
texture_repeat = 3
material = SubResource("ShaderMaterial_0wdxr")
texture = ExtResource("4")
texture_rotation = 1.5707964
polygon = PackedVector2Array(-146, -42, -198, 93, 236, 177, 335, 31, 236, -122)

[node name="Line2D" type="Line2D" parent="Art"]
unique_name_in_owner = true
clip_children = 2
closed = true
width = 4.0
joint_mode = 2
antialiased = true

[node name="HealthComponent" parent="Art" instance=ExtResource("5")]
unique_name_in_owner = true
clip_children = 1
z_index = 0
clip_contents = true
custom_minimum_size = Vector2(0, 0)
offset_right = 1.0
offset_bottom = 1.0

[node name="DamageOverlayPolygon2D" type="Polygon2D" parent="Art/HealthComponent"]
unique_name_in_owner = true

[node name="DamageLine2D" type="Line2D" parent="Art/HealthComponent"]
unique_name_in_owner = true
light_mask = 2
closed = true
width = 4.0
default_color = Color(0.95, 0.95, 0.95, 1)
joint_mode = 2
antialiased = true

[node name="Special Flair" type="Node2D" parent="Art"]
unique_name_in_owner = true

[node name="Tendril" parent="Art/Special Flair" instance=ExtResource("6")]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_6p8m6")
width = 300.0

[node name="Special Overlay" type="Polygon2D" parent="Art/Special Flair"]
unique_name_in_owner = true
visible = false
z_index = 2
texture_repeat = 2
material = SubResource("ShaderMaterial_hhx2n")
scale = Vector2(1.05, 1.05)
color = Color(0, 0, 0, 0.0588235)
antialiased = true
texture = ExtResource("7")
texture_scale = Vector2(6, 6)
polygon = PackedVector2Array(-79, -18, 75, -11, 99, 48, 25, 106, -82, 93)

[node name="Radioactive" parent="Art/Special Flair" instance=ExtResource("8")]
unique_name_in_owner = true
visible = false

[connection signal="death_event" from="Art/HealthComponent" to="." method="_on_health_component_death_event"]
[connection signal="health_changed" from="Art/HealthComponent" to="." method="_on_health_component_health_changed"]
